# Pigeon

./: .gitignore  CODING_STANDARDS.md  M0_tasks.md  M1_tasks.md  Makefile  pigeon_tech_decisions_locked_v_0.md  readme.md
Pigeon/: Cargo.toml  readme.md
Pigeon/.github/workflows/: ci.yml  gui_ci.yml  release.yml
Pigeon/config/: default.toml
Pigeon/docs/: ARCHITECTURE_OVERVIEW.md  CODING_STANDARDS.md  M0_tasks.md  M1_tasks.md  M2_tasks.md  M3_tasks.md  PROJECT_LAYOUT.md  TECH_DECISIONS_LOCKED_V0.md
Pigeon/queue_db/: db  snap.000000000000024B
Pigeon/src/: api.rs  config.rs  crypto.rs  error.rs  identity.rs  lib.rs  main.rs  ops.rs  settings.rs
Pigeon/src/messaging/: compose.rs  message.rs  mod.rs  queue.rs  receive.rs  send.rs  send_loop.rs
Pigeon/src/network/: mod.rs  ping.rs  protocol.rs  rr.rs
Pigeon/src/storage/: at_rest.rs  contacts.rs  mod.rs  nonce_store.rs  queue.rs
Pigeon/src/ui/: cli.rs  mod.rs
Pigeon/tests/: accessibility_api_tests.rs  at_rest_passphrase_tests.rs  config_tests.rs  contact_resolution_tests.rs  contacts_inbox_ui_api_tests.rs  crypto_tests.rs  gui_api_smoke.rs  inbox_cli_like_tests.rs  integration_roundtrip.rs  messaging_flow_tests.rs  messaging_receive_tests.rs  messaging_tests.rs  messaging_ui_watcher_tests.rs  network_smoke.rs  observability_api_tests.rs  onboarding_identity_api_tests.rs  ops_metrics_tests.rs  ping_tests.rs  queue_tests.rs  retry_tests.rs  security_options_api_tests.rs  send_net_reconnect_tests.rs  settings_network_api_tests.rs  updates_api_tests.rs
scripts/: check.ps1  fmt.ps1  lint.ps1  test.ps1
(+1 files in other folders)
